# immich-face-to-album

./: .gitignore  Dockerfile  README.MD  TESTING.md  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release-to-dockerhub.yml  release-to-pip.yml  test.yml
immich_face_to_album/: __main__.py
tests/: __init__.py  test_api_functions.py  test_cli.py  test_helpers.py
